# sddm-theme

./: .gitignore  CMakeLists.txt  FishUIMenu.qml  FishUIMenuItem.qml  Main.qml  README.md  SessionMenu.qml  UserView.qml  sddm.conf
debian/: changelog  control  copyright
